mostly hacky fixes using any.. not proud but.. errors 0!!!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "WebWorker"
     ],
     "outDir": "lib",
-    "rootDir": "src",
+    "rootDir": "",
   },
   "include": [
     "src/**/*.ts"
