blindly update lots of npm and make some changes WIP

--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "@types/benchmark": "^2.1.0",
     "@types/browserify": "^12.0.36",
     "@types/cssnano": "^4.0.0",
-    "@types/d3": "^4.13.12",
-    "@types/diff": "^4.0.2",
+    "@types/d3": "^7.0.0",
+    "@types/diff": "^5.0.1",
     "@types/earcut": "^2.1.1",
-    "@types/ejs": "^2.7.0",
+    "@types/ejs": "^3.0.7",
     "@types/eslint": "^7.2.6",
     "@types/geojson": "^7946.0.7",
     "@types/gl": "^4.1.0",
@@ -70,17 +70,17 @@
     "@types/npm-packlist": "^1.1.1",
     "@types/pbf": "^3.0.2",
     "@types/pixelmatch": "^5.2.2",
-    "@types/pngjs": "^3.4.2",
-    "@types/puppeteer": "^1.20.7",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
+    "@types/pngjs": "^6.0.1",
+    "@types/puppeteer": "^5.4.4",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "@types/request": "^2.48.5",
     "@types/rollup-plugin-json": "^3.0.2",
-    "@types/rollup-plugin-sourcemaps": "^0.4.2",
+    "@types/rollup-plugin-sourcemaps": "^0.5.0",
     "@types/selenium-webdriver": "^4.0.10",
     "@types/shuffle-seed": "^1.1.0",
-    "@types/sinon": "^7.5.2",
-    "@types/stylelint": "^9.10.1",
+    "@types/sinon": "^10.0.2",
+    "@types/stylelint": "^13.13.1",
     "@types/supercluster": "^5.0.2",
     "@types/tape": "^4.13.0",
     "@types/window-or-global": "^1.0.4",
@@ -90,16 +90,17 @@
     "babel-eslint": "^10.0.1",
     "babelify": "^10.0.0",
     "benchmark": "^2.1.4",
-    "browserify": "^16.5.0",
+    "browserify": "^17.0.0",
     "canvas": "^2.6.1",
     "chalk": "^3.0.0",
     "chokidar": "^3.0.2",
     "cross-env": "^7.0.3",
-    "cssnano": "^4.1.10",
-    "d3": "^4.12.0",
-    "diff": "^4.0.1",
-    "documentation": "~12.1.1",
-    "ejs": "^2.5.7",
+    "cssnano": "^5.0.7",
+    "d3": "^7.0.0",
+    "deepmerge": "^4.2.2",
+    "diff": "^5.0.0",
+    "documentation": "^13.2.5",
+    "ejs": "^3.1.6",
     "eslint": "^7.32.0",
     "eslint-config-mourner": "^3.0.0",
     "eslint-plugin-html": "^6.1.2",
@@ -109,15 +110,15 @@
     "gl": "^4.5.3",
     "glob": "^7.1.4",
     "is-builtin-module": "^3.0.0",
-    "jsdom": "^13.0.0",
-    "json-stringify-pretty-compact": "^2.0.0",
+    "jsdom": "^16.6.0",
+    "json-stringify-pretty-compact": "^3.0.0",
     "jsonwebtoken": "^8.3.0",
     "list-npm-contents": "^1.0.2",
     "lodash": "^4.17.19",
     "lodash.template": "^4.5.0",
     "mapbox-gl-styles": "^2.0.2",
     "mock-geolocation": "^1.0.11",
-    "node-notifier": "^5.4.3",
+    "node-notifier": "^10.0.0",
     "node-plantuml": "^0.9.0",
     "npm-font-open-sans": "^1.1.0",
     "npm-packlist": "^2.1.1",
@@ -125,28 +126,28 @@
     "nyc": "^13.3.0",
     "pirates": "^4.0.1",
     "pixelmatch": "^5.1.0",
-    "pngjs": "^3.4.0",
+    "pngjs": "^6.0.0",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "postcss-inline-svg": "^5.0.0",
     "pretty-bytes": "^5.1.0",
-    "puppeteer": "^1.18.0",
+    "puppeteer": "^10.1.0",
     "qrcode-terminal": "^0.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "request": "^2.88.0",
     "rollup": "^2.56.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
-    "semver": "^5.5.0",
+    "semver": "^7.3.5",
     "shuffle-seed": "^1.1.6",
-    "sinon": "^7.3.2",
+    "sinon": "^11.1.1",
     "source-map-explorer": "^2.5.1",
     "st": "^1.2.2",
-    "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.2.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "tap": "~12.4.1",
     "tap-parser": "^10.0.1",
     "tape": "^4.13.2",
