--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "engines": {
     "node": ">=6.4.0"
   },
-  "types": "src/index.d.ts",
+  "types": "types/index.d.ts",
   "dependencies": {
     "@mapbox/geojson-rewind": "^0.5.0",
     "@mapbox/jsonlint-lines-primitives": "^2.0.2",
@@ -21,7 +21,6 @@
     "@mapbox/unitbezier": "^0.0.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@mapbox/whoots-js": "^3.1.0",
-    "@types/window-or-global": "^1.0.4",
     "csscolorparser": "~1.0.3",
     "earcut": "^2.2.2",
     "geojson-vt": "^3.2.1",
@@ -39,11 +38,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@mapbox/flow-remove-types": "^1.3.0-await.upstream.2",
     "@mapbox/gazetteer": "^4.0.4",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.1",
     "@mapbox/mvt-fixtures": "^3.6.0",
     "@octokit/rest": "^16.30.1",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-strip": "^1.3.1",
     "@types/babel__core": "^7.1.12",
     "@types/babelify": "^7.3.6",
@@ -56,6 +55,7 @@
     "@types/ejs": "^2.7.0",
     "@types/eslint": "^7.2.6",
     "@types/esm": "~3.2.0",
+    "@types/geojson": "^7946.0.7",
     "@types/gl": "^4.1.0",
     "@types/glob": "^7.1.3",
     "@types/jsdom": "^16.2.5",
@@ -81,9 +81,9 @@
     "@types/stylelint": "^9.10.1",
     "@types/supercluster": "^5.0.2",
     "@types/tape": "^4.13.0",
+    "@types/window-or-global": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
-    "@types/geojson": "^7946.0.7",
     "address": "^1.1.2",
     "babel-eslint": "^10.0.1",
     "babelify": "^10.0.0",
@@ -100,13 +100,10 @@
     "ejs": "^2.5.7",
     "eslint": "^7.15.0",
     "eslint-config-mourner": "^3.0.0",
-    "eslint-plugin-flowtype": "^3.9.1",
     "eslint-plugin-html": "^5.0.5",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^30.7.8",
     "eslint-plugin-react": "^7.21.5",
-    "esm": "~3.0.84",
-    "flow-bin": "^0.100.0",
     "gl": "^4.5.3",
     "glob": "^7.1.4",
     "is-builtin-module": "^3.0.0",
@@ -135,14 +132,14 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "request": "^2.88.0",
-    "rollup": "^1.23.1",
+    "rollup": "^2.54.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
     "semver": "^5.5.0",
@@ -166,14 +163,13 @@
   },
   "esm": true,
   "scripts": {
-    "build-tsc": "tsc --noEmit -p .",
-    "build-dev": "rollup -c --environment BUILD:dev",
-    "watch-dev": "rollup -c --environment BUILD:dev --watch",
-    "build-prod": "rollup -c --environment BUILD:production",
-    "build-prod-min": "rollup -c --environment BUILD:production,MINIFY:true",
+    "build-tsc": "tsc && cp -rf ./src/shaders/*.glsl ./rollup/build/tsc/src/shaders",
+    "build-dev": "npm run build-tsc && rollup -c --environment BUILD:dev",
+    "watch-dev": "npm run build-tsc && rollup -c --environment BUILD:dev --watch",
+    "build-prod": "npm run build-tsc && rollup -c --environment BUILD:production",
+    "build-prod-min": "npm run build-tsc && rollup -c --environment BUILD:production,MINIFY:true",
     "build-csp": "rollup -c rollup.config.csp.js",
     "build-query-suite": "rollup -c test/integration/rollup.config.test.js",
-    "build-flow-types": "mkdir -p dist && cp build/maplibre-gl.js.flow dist/maplibre-gl.js.flow && cp build/maplibre-gl.js.flow dist/maplibre-gl-dev.js.flow",
     "build-css": "postcss -o dist/maplibre-gl.css src/css/maplibre-gl.css",
     "build-style-spec": "cd src/style-spec && npm run build && cd ../.. && mkdir -p dist/style-spec && cp src/style-spec/dist/* dist/style-spec",
     "build-diagrams": "cd docs/diagrams; ls *.plantuml | xargs -I {} puml generate --svg {} -o {}.svg",
@@ -191,7 +187,7 @@
     "lint": "eslint src --ext .ts",
     "lint-docs": "documentation lint src/index.js",
     "lint-css": "stylelint 'src/css/maplibre-gl.css'",
-    "test": "run-s lint lint-css lint-docs test-flow test-unit",
+    "test": "run-s lint lint-css lint-docs test-unit",
     "test-suite": "run-s test-render test-query test-expressions",
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-unit": "cross-env build/run-tap --reporter classic --no-coverage test/unit",
@@ -202,9 +198,8 @@
     "watch-query": "testem -f test/integration/testem.js",
     "test-query": "testem ci -f test/integration/testem.js -R xunit > test/integration/query-tests/test-results.xml",
     "test-expressions": "cross-env build/run-node test/expression.test.js",
-    "test-flow": "cross-env build/run-node build/generate-flow-typed-style-spec && flow .",
-    "test-cov": "nyc --require=@mapbox/flow-remove-types/register --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
-    "prepublishOnly": "run-s prepare-publish build-flow-types build-dev build-prod-min build-prod build-csp build-css build-style-spec test-build diff-tarball",
+    "test-cov": "nyc --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
+    "prepublishOnly": "run-s prepare-publish build-dev build-prod-min build-prod build-csp build-css build-style-spec test-build diff-tarball",
     "print-release-url": "node build/print-release-url.js",
     "codegen": "cross-env build/run-node build/generate-style-code.js && build/run-node build/generate-struct-arrays.js"
   },
@@ -212,8 +207,7 @@
     "build/",
     "dist/maplibre-gl*",
     "dist/style-spec/",
-    "flow-typed/*.js",
-    "src/",
-    ".flowconfig"
+    "types/",
+    "src/"
   ]
 }
