--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": ">=6.4.0"
   },
   "types": "types/index.d.ts",
+  "type": "module",
   "dependencies": {
     "@mapbox/geojson-rewind": "^0.5.0",
     "@mapbox/jsonlint-lines-primitives": "^2.0.2",
@@ -54,7 +55,6 @@
     "@types/earcut": "^2.1.1",
     "@types/ejs": "^2.7.0",
     "@types/eslint": "^7.2.6",
-    "@types/esm": "~3.2.0",
     "@types/geojson": "^7946.0.7",
     "@types/gl": "^4.1.0",
     "@types/glob": "^7.1.3",
@@ -161,13 +161,15 @@
     "./src/util/window.js": "./src/util/browser/window.js",
     "./src/util/web_worker.js": "./src/util/browser/web_worker.js"
   },
-  "esm": true,
   "scripts": {
-    "build-tsc": "tsc && cp -rf ./src/shaders/*.glsl ./rollup/build/tsc/src/shaders",
+    "build-glsl": "node rollup/copy-glsl-files.js ./rollup/build/tsc/shaders",
+    "build-glsl-min": "node rollup/copy-glsl-files.js ./rollup/build/tsc/shaders true",
+    "build-tsc": "tsc && npm run build-glsl",
+    "build-tsc-min": "tsc && npm run build-glsl-min",
     "build-dev": "npm run build-tsc && rollup -c --environment BUILD:dev",
     "watch-dev": "npm run build-tsc && rollup -c --environment BUILD:dev --watch",
     "build-prod": "npm run build-tsc && rollup -c --environment BUILD:production",
-    "build-prod-min": "npm run build-tsc && rollup -c --environment BUILD:production,MINIFY:true",
+    "build-prod-min": "npm run build-tsc-min && rollup -c --environment BUILD:production,MINIFY:true",
     "build-csp": "rollup -c rollup.config.csp.js",
     "build-query-suite": "rollup -c test/integration/rollup.config.test.js",
     "build-css": "postcss -o dist/maplibre-gl.css src/css/maplibre-gl.css",
@@ -193,7 +195,7 @@
     "test-unit": "cross-env build/run-tap --reporter classic --no-coverage test/unit",
     "test-build": "cross-env build/run-tap --no-coverage test/build/**/*.test.js",
     "test-browser": "cross-env build/run-tap --reporter spec --no-coverage test/browser/**/*.test.js",
-    "test-render": "node --max-old-space-size=2048 test/render.test.js",
+    "test-render": "node --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/render.test.js",
     "test-query-node": "node test/query.test.js",
     "watch-query": "testem -f test/integration/testem.js",
     "test-query": "testem ci -f test/integration/testem.js -R xunit > test/integration/query-tests/test-results.xml",
