--- a/package.json
+++ b/package.json
@@ -199,7 +199,7 @@
     "test-query-node": "node test/query.test.js",
     "watch-query": "testem -f test/integration/testem.js",
     "test-query": "testem ci -f test/integration/testem.js -R xunit > test/integration/query-tests/test-results.xml",
-    "test-expressions": "cross-env build/run-node test/expression.test.js",
+    "test-expressions": "node --experimental-specifier-resolution=node test/expression.test.js",
     "test-cov": "nyc --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
     "prepublishOnly": "run-s prepare-publish build-dev build-prod-min build-prod build-csp build-css build-style-spec test-build diff-tarball",
     "print-release-url": "node build/print-release-url.js",
