--- a/package.json
+++ b/package.json
@@ -196,7 +196,7 @@
     "test-build": "cross-env build/run-tap --no-coverage test/build/**/*.test.js",
     "test-browser": "cross-env build/run-tap --reporter spec --no-coverage test/browser/**/*.test.js",
     "test-render": "node --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/render.test.js",
-    "test-query-node": "node test/query.test.js",
+    "test-query-node": "node --experimental-specifier-resolution=node --experimental-json-modules test/query.test.js",
     "watch-query": "testem -f test/integration/testem.js",
     "test-query": "testem ci -f test/integration/testem.js -R xunit > test/integration/query-tests/test-results.xml",
     "test-expressions": "node --experimental-specifier-resolution=node test/expression.test.js",
