--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
           node-version: 14
           architecture: x64
       - run: npm ci
-      - run: npm build-dev
+      - run: npm run build-dev
       # see: https://github.com/stackgl/headless-gl#how-can-headless-gl-be-used-on-a-headless-linux-machine
       - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-unit
 
