--- a/package.json
+++ b/package.json
@@ -124,8 +124,9 @@
     "pirates": "^4.0.1",
     "pixelmatch": "^5.1.0",
     "pngjs": "^3.4.0",
-    "postcss-cli": "^6.1.2",
-    "postcss-inline-svg": "^3.1.1",
+    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-inline-svg": "^5.0.0",
     "pretty-bytes": "^5.1.0",
     "puppeteer": "^1.18.0",
     "qrcode-terminal": "^0.12.0",
@@ -194,8 +195,8 @@
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-unit": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage test/unit",
     "test-unit-file": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage ",
-    "test-build": "cross-env build/run-tap --no-coverage test/build/**/*.test.js",
-    "test-browser": "cross-env build/run-tap --reporter spec --no-coverage test/browser/**/*.test.js",
+    "test-build": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage test/build/**/*.test.js",
+    "test-browser": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage test/browser/**/*.test.js",
     "test-render": "node --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/render.test.js",
     "test-query-node": "node --experimental-specifier-resolution=node --experimental-json-modules test/query.test.js",
     "watch-query": "testem -f test/integration/testem.js",
