--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "importHelpers": false,
     "isolatedModules": true,
+    "importsNotUsedAsValues": "preserve",
     "jsx": "preserve",
     "module": "ES6",
     "moduleResolution": "Node",
