--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
     "@types/supercluster": "^5.0.2",
     "@types/tape": "^4.13.0",
     "@types/window-or-global": "^1.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "address": "^1.1.2",
     "babel-eslint": "^10.0.1",
     "babelify": "^10.0.0",
@@ -182,7 +182,7 @@
     "start-release": "run-s build-prod-min build-css print-release-url start-server",
     "diff-tarball": "cross-env build/run-node build/diff-tarball",
     "prepare-publish": "git clean -fdx && yarn install",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint --ext '.ts,.js,.html' --ignore-path .gitignore src build debug/*.html",
     "lint-docs": "documentation lint src/index.js",
     "lint-css": "stylelint 'src/css/maplibre-gl.css'",
     "test": "run-s lint lint-css lint-docs test-unit",
