Fix lint for windows, update versions.

--- a/package.json
+++ b/package.json
@@ -100,10 +100,10 @@
     "diff": "^4.0.1",
     "documentation": "~12.1.1",
     "ejs": "^2.5.7",
-    "eslint": "^7.15.0",
+    "eslint": "^7.32.0",
     "eslint-config-mourner": "^3.0.0",
     "eslint-plugin-html": "^6.1.2",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsdoc": "^36.0.6",
     "eslint-plugin-react": "^7.24.0",
     "gl": "^4.5.3",
@@ -135,7 +135,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "request": "^2.88.0",
-    "rollup": "^2.56.0",
+    "rollup": "^2.56.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
@@ -182,7 +182,7 @@
     "start-release": "run-s build-prod-min build-css print-release-url start-server",
     "diff-tarball": "cross-env build/run-node build/diff-tarball",
     "prepare-publish": "git clean -fdx && yarn install",
-    "lint": "eslint --ext '.ts,.js,.html' --ignore-path .gitignore src build debug/*.html",
+    "lint": "eslint --ext \".ts,.js,.html\" --ignore-path .gitignore src build debug/*.html",
     "lint-docs": "documentation lint src/index.js",
     "lint-css": "stylelint 'src/css/maplibre-gl.css'",
     "test": "run-s lint lint-css lint-docs test-unit",
