Typescript: merge from main (#243)
* Highlight backport rules

* Add backport rules

* Add backport rules

* Use organization secret NPM_ORG_TOKEN (#231)

* Fix link in README and CONTRIBUTING. Fix typo in README. (#237)

* one yarn forgotten (#242)

Co-authored-by: Marcel Normann <marcel.normann@wheregroup.com>
Co-authored-by: Oliver Wipfli <oliver.wipfli@leichteralsluft.ch>
Co-authored-by: tunnelpuzzle <79618312+tunnelpuzzle@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -181,8 +181,8 @@
     "start-bench": "run-p watch-benchmarks start-server",
     "start-release": "run-s build-prod-min build-css print-release-url start-server",
     "diff-tarball": "cross-env build/run-node build/diff-tarball",
-    "prepare-publish": "git clean -fdx && yarn install",
     "lint": "eslint --ext \".ts,.js,.html\" --ignore-path .gitignore src build debug/*.html",
+    "prepare-publish": "git clean -fdx & npm install",
     "lint-docs": "documentation lint src/index.js",
     "lint-css": "stylelint 'src/css/maplibre-gl.css'",
     "test": "run-s lint lint-css lint-docs test-unit",
