--- a/package.json
+++ b/package.json
@@ -148,7 +148,6 @@
     "start-bench": "run-p watch-benchmarks start-server",
     "start-release": "run-s build-prod-min build-css print-release-url start-server",
     "diff-tarball": "cross-env build/run-node build/diff-tarball",
-    "prepare-publish": "git clean -fdx & npm install",
     "lint": "eslint --cache --ignore-path .gitignore src test bench build debug/*.html",
     "lint-docs": "documentation lint src/index.js",
     "lint-css": "stylelint 'src/css/maplibre-gl.css'",
@@ -165,7 +164,7 @@
     "test-expressions": "cross-env build/run-node test/expression.test.js",
     "test-flow": "cross-env build/run-node build/generate-flow-typed-style-spec && flow .",
     "test-cov": "nyc --require=@mapbox/flow-remove-types/register --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
-    "prepublishOnly": "run-s prepare-publish build-flow-types build-dev build-prod-min build-prod build-csp build-css build-style-spec test-build diff-tarball",
+    "prepublishOnly": "run-s build-flow-types build-dev build-prod-min build-prod build-csp build-css build-style-spec test-build diff-tarball",
     "print-release-url": "node build/print-release-url.js",
     "codegen": "cross-env build/run-node build/generate-style-code.js && build/run-node build/generate-struct-arrays.js"
   },
