update most libs WIP

--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
     "vt-pbf": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@mapbox/gazetteer": "^4.0.4",
+    "@babel/core": "^7.15.0",
+    "@mapbox/gazetteer": "^5.1.0",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.1",
     "@mapbox/mvt-fixtures": "^3.6.0",
-    "@octokit/rest": "^16.30.1",
+    "@octokit/rest": "^16.43.2",
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-replace": "^3.0.0",
-    "@rollup/plugin-strip": "^1.3.1",
+    "@rollup/plugin-strip": "^2.1.0",
     "@types/babel__core": "^7.1.12",
     "@types/babelify": "^7.3.6",
     "@types/benchmark": "^2.1.0",
@@ -56,47 +56,48 @@
     "@types/d3": "^7.0.0",
     "@types/diff": "^5.0.1",
     "@types/earcut": "^2.1.1",
-    "@types/ejs": "^3.0.7",
+    "@types/ejs": "^3.1.0",
     "@types/eslint": "^7.2.6",
     "@types/geojson": "^7946.0.7",
     "@types/gl": "^4.1.0",
     "@types/glob": "^7.1.3",
     "@types/jsdom": "^16.2.5",
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash.template": "^4.5.0",
     "@types/minimist": "^1.2.1",
     "@types/murmurhash-js": "^1.0.3",
     "@types/node-notifier": "^8.0.0",
     "@types/npm-packlist": "^1.1.1",
+    "@types/offscreencanvas": "^2019.6.3",
     "@types/pbf": "^3.0.2",
     "@types/pixelmatch": "^5.2.2",
     "@types/pngjs": "^6.0.1",
     "@types/puppeteer": "^5.4.4",
-    "@types/react": "^17.0.15",
+    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "@types/request": "^2.48.5",
+    "@types/request": "^2.48.7",
     "@types/rollup-plugin-json": "^3.0.2",
     "@types/rollup-plugin-sourcemaps": "^0.5.0",
     "@types/selenium-webdriver": "^4.0.10",
     "@types/shuffle-seed": "^1.1.0",
     "@types/sinon": "^10.0.2",
-    "@types/stylelint": "^13.13.1",
+    "@types/stylelint": "^13.13.2",
     "@types/supercluster": "^5.0.2",
-    "@types/tape": "^4.13.0",
+    "@types/tape": "^4.13.2",
     "@types/window-or-global": "^1.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "address": "^1.1.2",
     "babel-eslint": "^10.0.1",
     "babelify": "^10.0.0",
     "benchmark": "^2.1.4",
     "browserify": "^17.0.0",
     "canvas": "^2.6.1",
-    "chalk": "^3.0.0",
+    "chalk": "^4.1.2",
     "chokidar": "^3.0.2",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.0.7",
-    "d3": "^7.0.0",
+    "cssnano": "^5.0.8",
+    "d3": "^4.12.0",
     "deepmerge": "^4.2.2",
     "diff": "^5.0.0",
     "documentation": "^13.2.5",
@@ -106,11 +107,11 @@
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsdoc": "^36.0.6",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.25.0",
     "gl": "^4.5.3",
     "glob": "^7.1.4",
     "is-builtin-module": "^3.0.0",
-    "jsdom": "^16.6.0",
+    "jsdom": "^17.0.0",
     "json-stringify-pretty-compact": "^3.0.0",
     "jsonwebtoken": "^8.3.0",
     "list-npm-contents": "^1.0.2",
@@ -121,9 +122,9 @@
     "node-notifier": "^10.0.0",
     "node-plantuml": "^0.9.0",
     "npm-font-open-sans": "^1.1.0",
-    "npm-packlist": "^2.1.1",
+    "npm-packlist": "^3.0.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^13.3.0",
+    "nyc": "^15.1.0",
     "pirates": "^4.0.1",
     "pixelmatch": "^5.1.0",
     "pngjs": "^6.0.0",
@@ -131,29 +132,29 @@
     "postcss-cli": "^8.3.1",
     "postcss-inline-svg": "^5.0.0",
     "pretty-bytes": "^5.1.0",
-    "puppeteer": "^10.1.0",
+    "puppeteer": "^10.2.0",
     "qrcode-terminal": "^0.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "request": "^2.88.0",
-    "rollup": "^2.56.1",
+    "rollup": "^2.56.3",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
     "semver": "^7.3.5",
     "shuffle-seed": "^1.1.6",
-    "sinon": "^11.1.1",
+    "sinon": "^11.1.2",
     "source-map-explorer": "^2.5.1",
-    "st": "^1.2.2",
+    "st": "^3.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
-    "tap": "~12.4.1",
+    "tap": "~15.0.9",
     "tap-parser": "^10.0.1",
-    "tape": "^4.13.2",
+    "tape": "^5.3.1",
     "tape-filter": "^1.0.4",
-    "testem": "^3.0.0",
-    "typescript": "^4.3.5"
+    "testem": "^3.4.3",
+    "typescript": "^4.4.2"
   },
   "browser": {
     "./rollup/build/tsc/util/web_worker.js": "./build/web_worker_replacement.js"
