--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "types": "types/index.d.ts",
   "type": "module",
   "dependencies": {
+    "@babel/preset-env": "^7.15.0",
     "@mapbox/geojson-rewind": "^0.5.0",
     "@mapbox/jsonlint-lines-primitives": "^2.0.2",
     "@mapbox/mapbox-gl-supported": "^1.5.0",
@@ -153,7 +154,7 @@
     "tap-parser": "^10.0.1",
     "tape": "^5.3.1",
     "tape-filter": "^1.0.4",
-    "testem": "^3.4.3",
+    "testem": "^3.0.0",
     "typescript": "^4.4.2"
   },
   "browser": {
