update minor point releases

--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "@types/supercluster": "^5.0.2",
     "@types/tape": "^4.13.2",
     "@types/window-or-global": "^1.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "address": "^1.1.2",
     "babel-eslint": "^10.0.1",
     "babelify": "^10.0.0",
@@ -108,7 +108,7 @@
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsdoc": "^36.0.6",
-    "eslint-plugin-react": "^7.25.0",
+    "eslint-plugin-react": "^7.25.1",
     "gl": "^4.5.3",
     "glob": "^7.1.4",
     "is-builtin-module": "^3.0.0",
@@ -142,7 +142,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
-    "selenium-webdriver": "^4.0.0-alpha.5",
+    "selenium-webdriver": "^4.0.0-rc-1",
     "semver": "^7.3.5",
     "shuffle-seed": "^1.1.6",
     "sinon": "^11.1.2",
