update typescript to 4.4.2 update testem to 3.5.0 update eslint update selenium (from beta.4 to rc-1) update rollup, plugin-strip and remove deprecated rolllup @types update react, react-dom and types update @babel/core to 7.15.0 update stylelint 9.10.1 -> 13.13.1, types and config patch update to @types/jsonwebtoken patch update to @types/request update tape to 5.3.1 update sinon to 11.1.2 and types update semver to 7.3.5 update chalk to 4.1.2 update browserify to 17.0.0 update cssnano to 5.0.8 update pngjs to 6.0.0 and types update patch @babel/core 7.15.4 update puppeteer to 10.2.0 update json-stringify-pretty-compact to 3.0.0 update ejs to 3.1.6 and types update st to 3.0.0

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mapbox/unitbezier": "^0.0.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@mapbox/whoots-js": "^3.1.0",
+    "@types/offscreencanvas": "^2019.6.3",
     "csscolorparser": "~1.0.3",
     "earcut": "^2.2.2",
     "geojson-vt": "^3.2.1",
@@ -38,7 +39,7 @@
     "vt-pbf": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.15.4",
     "@mapbox/gazetteer": "^4.0.4",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.1",
     "@mapbox/mvt-fixtures": "^3.6.0",
@@ -47,7 +48,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-replace": "^3.0.0",
-    "@rollup/plugin-strip": "^1.3.1",
+    "@rollup/plugin-strip": "^2.1.0",
     "@types/babel__core": "^7.1.12",
     "@types/babelify": "^7.3.6",
     "@types/benchmark": "^2.1.0",
@@ -56,13 +57,13 @@
     "@types/d3": "^4.13.12",
     "@types/diff": "^4.0.2",
     "@types/earcut": "^2.1.1",
-    "@types/ejs": "^2.7.0",
+    "@types/ejs": "^3.1.0",
     "@types/eslint": "^7.2.6",
     "@types/geojson": "^7946.0.7",
     "@types/gl": "^4.1.0",
     "@types/glob": "^7.1.3",
     "@types/jsdom": "^16.2.5",
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash.template": "^4.5.0",
     "@types/minimist": "^1.2.1",
     "@types/murmurhash-js": "^1.0.3",
@@ -70,46 +71,45 @@
     "@types/npm-packlist": "^1.1.1",
     "@types/pbf": "^3.0.2",
     "@types/pixelmatch": "^5.2.2",
-    "@types/pngjs": "^3.4.2",
-    "@types/puppeteer": "^1.20.7",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "@types/request": "^2.48.5",
+    "@types/pngjs": "^6.0.1",
+    "@types/puppeteer": "^5.4.4",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "@types/request": "^2.48.7",
     "@types/rollup-plugin-json": "^3.0.2",
-    "@types/rollup-plugin-sourcemaps": "^0.4.2",
     "@types/selenium-webdriver": "^4.0.10",
     "@types/shuffle-seed": "^1.1.0",
-    "@types/sinon": "^7.5.2",
-    "@types/stylelint": "^9.10.1",
+    "@types/sinon": "^10.0.2",
+    "@types/stylelint": "^13.13.2",
     "@types/supercluster": "^5.0.2",
-    "@types/tape": "^4.13.0",
+    "@types/tape": "^4.13.2",
     "@types/window-or-global": "^1.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "address": "^1.1.2",
     "babel-eslint": "^10.0.1",
     "babelify": "^10.0.0",
     "benchmark": "^2.1.4",
-    "browserify": "^16.5.0",
+    "browserify": "^17.0.0",
     "canvas": "^2.6.1",
-    "chalk": "^3.0.0",
+    "chalk": "^4.1.2",
     "chokidar": "^3.0.2",
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.8",
     "d3": "^4.12.0",
     "diff": "^4.0.1",
     "documentation": "~12.1.1",
-    "ejs": "^2.5.7",
+    "ejs": "^3.1.6",
     "eslint": "^7.32.0",
     "eslint-config-mourner": "^3.0.0",
     "eslint-plugin-html": "^6.1.2",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-jsdoc": "^36.0.6",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsdoc": "^36.0.8",
+    "eslint-plugin-react": "^7.25.1",
     "gl": "^4.5.3",
     "glob": "^7.1.4",
     "is-builtin-module": "^3.0.0",
     "jsdom": "^13.0.0",
-    "json-stringify-pretty-compact": "^2.0.0",
+    "json-stringify-pretty-compact": "^3.0.0",
     "jsonwebtoken": "^8.3.0",
     "list-npm-contents": "^1.0.2",
     "lodash": "^4.17.19",
@@ -124,34 +124,34 @@
     "nyc": "^13.3.0",
     "pirates": "^4.0.1",
     "pixelmatch": "^5.1.0",
-    "pngjs": "^3.4.0",
+    "pngjs": "^6.0.0",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "postcss-inline-svg": "^5.0.0",
     "pretty-bytes": "^5.1.0",
-    "puppeteer": "^1.18.0",
+    "puppeteer": "^10.2.0",
     "qrcode-terminal": "^0.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "request": "^2.88.0",
-    "rollup": "^2.56.1",
+    "rollup": "^2.56.3",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
-    "selenium-webdriver": "^4.0.0-alpha.5",
-    "semver": "^5.5.0",
+    "selenium-webdriver": "^4.0.0-rc-1",
+    "semver": "^7.3.5",
     "shuffle-seed": "^1.1.6",
-    "sinon": "^7.3.2",
+    "sinon": "^11.1.2",
     "source-map-explorer": "^2.5.1",
-    "st": "^1.2.2",
-    "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.2.0",
+    "st": "^3.0.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "tap": "~12.4.1",
     "tap-parser": "^10.0.1",
-    "tape": "^4.13.2",
+    "tape": "^5.3.1",
     "tape-filter": "^1.0.4",
-    "testem": "^3.0.0",
-    "typescript": "^4.3.5"
+    "testem": "^3.5.0",
+    "typescript": "^4.4.2"
   },
   "browser": {
     "./rollup/build/tsc/util/web_worker.js": "./build/web_worker_replacement.js"
