--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mapbox/unitbezier": "^0.0.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@mapbox/whoots-js": "^3.1.0",
+    "@types/offscreencanvas": "^2019.6.3",
     "csscolorparser": "~1.0.3",
     "earcut": "^2.2.2",
     "geojson-vt": "^3.2.1",
@@ -152,7 +153,7 @@
     "tape": "^4.13.2",
     "tape-filter": "^1.0.4",
     "testem": "^3.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.2"
   },
   "browser": {
     "./rollup/build/tsc/util/web_worker.js": "./build/web_worker_replacement.js"
