--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -51,8 +51,8 @@ jobs:
           name: dist
           path: before
           repo: maplibre/maplibre-gl-js
-      - run: yarn source-map-explorer before/maplibre-gl.js --gzip --json before.json
-      - run: yarn source-map-explorer after/maplibre-gl.js --gzip --json after.json
+      - run: npx source-map-explorer before/maplibre-gl.js --gzip --json before.json
+      - run: npx source-map-explorer after/maplibre-gl.js --gzip --json after.json
       - name: Build bundle size report
         run: node build/check-bundle-size.js > comment-body.txt
       - name: Dump bundle size report
