--- a/src/style-spec/package.json
+++ b/src/style-spec/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@maplibre/maplibre-gl-style-spec",
   "description": "a specification for maplibre gl styles",
-  "version": "14.1.0-dev",
+  "version": "14.0.1-rc.1",
   "author": "MapLibre",
   "keywords": [
     "mapbox",
