add jest to node

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "vt-pbf": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-typescript": "^7.15.0",
     "@mapbox/gazetteer": "^5.1.0",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.1",
     "@mapbox/mvt-fixtures": "^3.6.0",
@@ -88,6 +90,7 @@
     "@typescript-eslint/parser": "^4.30.0",
     "address": "^1.1.2",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^27.1.0",
     "babelify": "^10.0.0",
     "benchmark": "^2.1.4",
     "browserify": "^17.0.0",
@@ -108,6 +111,7 @@
     "gl": "^4.5.3",
     "glob": "^7.1.4",
     "is-builtin-module": "^3.0.0",
+    "jest": "^27.1.0",
     "jsdom": "^13.0.0",
     "json-stringify-pretty-compact": "^3.0.0",
     "jsonwebtoken": "^8.3.0",
@@ -183,7 +187,8 @@
     "lint": "eslint --ext \".ts,.js,.html\" --ignore-path .gitignore src build debug/*.html",
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint 'src/css/maplibre-gl.css'",
-    "test": "run-s lint lint-css lint-docs test-unit",
+    "test": "jest",
+    "test-jest": "jest",
     "test-suite": "run-s test-render test-query test-expressions",
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-unit": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage test/unit",
