--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/geojson": "^7946.0.7",
     "@types/gl": "^4.1.0",
     "@types/glob": "^7.1.3",
+    "@types/jest": "^27.0.1",
     "@types/jsdom": "^16.2.5",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash.template": "^4.5.0",
@@ -155,6 +156,7 @@
     "tape": "^5.3.1",
     "tape-filter": "^1.0.4",
     "testem": "^3.5.0",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   },
   "browser": {
@@ -184,11 +186,11 @@
     "start-bench": "run-p watch-benchmarks start-server",
     "start-release": "run-s build-prod-min build-css print-release-url start-server",
     "diff-tarball": "node build/diff-tarball.js",
-    "lint": "eslint --ext \".ts,.js,.html\" --ignore-path .gitignore src build debug/*.html",
+    "lint": "eslint --ext \".ts,.js,.html\" --ignore-path .gitignore src test/jest build debug/*.html",
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint \"src/css/maplibre-gl.css\"",
     "test": "run-s lint lint-css lint-docs test-unit",
-    "test-jest": "jest test/jest/",
+    "test-jest": "eslint --fix --ext \".ts,.js,.html\" test/jest && jest test/jest/",
     "test-suite": "run-s test-render test-query test-expressions",
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-unit": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage test/unit",
