--- a/.github/workflows/new-ci.yml
+++ b/.github/workflows/new-ci.yml
@@ -47,7 +47,7 @@ jobs:
       - run: npm run build-prod-min
       - run: npm run build-css
 
-  test:
+  test-win-mac:
     strategy:
       fail-fast: false
       matrix:
@@ -77,6 +77,34 @@ jobs:
       - run: npm run test-query
       - run: npm run test-expressions
 
+  test-ubuntu:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
+        node_version:
+          - 14
+        architecture:
+          - x64
+
+    name: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node_version }}
+          architecture: ${{ matrix.architecture }}
+      - run: npm ci
+      - run: npm run build-dev
+      # see: https://github.com/stackgl/headless-gl#how-can-headless-gl-be-used-on-a-headless-linux-machine
+      - run: npm run xvfb-run -s "-ac -screen 0 1280x1024x24" test-unit
+      - run: npm run test-render
+      - run: npm run test-query
+      - run: npm run test-expressions
 
   test-browser:
     timeout-minutes: 20
