--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-typescript": "^7.15.0",
     "@mapbox/gazetteer": "^5.1.0",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.1",
     "@mapbox/mvt-fixtures": "^3.6.0",
@@ -91,7 +89,6 @@
     "@typescript-eslint/parser": "^4.30.0",
     "address": "^1.1.2",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^27.1.0",
     "babelify": "^10.0.0",
     "benchmark": "^2.1.4",
     "browserify": "^17.0.0",
@@ -190,7 +187,7 @@
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint \"src/css/maplibre-gl.css\"",
     "test": "run-s lint lint-css lint-docs test-unit",
-    "test-jest": "eslint --fix --ext \".ts,.js,.html\" test/jest && jest test/jest/",
+    "test-jest": "jest",
     "test-suite": "run-s test-render test-query test-expressions",
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-unit": "tap --node-arg --no-warnings --node-arg --experimental-specifier-resolution=node --node-arg --experimental-json-modules --reporter classic --no-coverage test/unit",
